--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 
 .app-header {
   text-align: center;
-  background-color: #6d498f;
+  background-color: #502d18;
   color: white;
   padding: 20px;
   border-radius: 10px;
@@ -121,7 +121,7 @@ nav a:hover {
 
 .search-bar button {
   padding: 10px 20px;
-  background-color: #6d498f;
+  background-color: #502d18;
   color: white;
   border: none;
   border-radius: 5px;
