--- a/src/components/AddRecipe.css
+++ b/src/components/AddRecipe.css
@@ -41,7 +41,7 @@
   button {
     width: 100%;
     padding: 12px;
-    background-color: #6d498f;
+    background-color: #502d18;
     color: white;
     font-size: 1.2rem;
     border: none;
@@ -52,6 +52,7 @@
   
   button:hover {
     background-color: #543f7e;
+    transition: 1s ease;
   }
   
   .page-container {
